[tool.poetry]
name = "astro-platform"
version = "0.1.0"
description = "Professional astrological interpretation system"
authors = ["Astro Platform Team"]
readme = "README.md"
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = ">=0.111.0"
uvicorn = { extras = ["standard"], version = ">=0.29.0" }
sqlalchemy = { extras = ["asyncio"], version = ">=2.0.0" }
aiosqlite = ">=0.20.0"
alembic = ">=1.13.0"
asyncpg = ">=0.29.0"
psycopg2-binary = ">=2.9.9"
pydantic = ">=2.7.0"
pydantic-settings = ">=2.2.0"
python-dotenv = ">=1.0.0"
email-validator = ">=2.1.0"
greenlet = ">=3.0.0"

[tool.poetry.group.dev.dependencies]
pytest = ">=8.0.0"
pytest-asyncio = ">=0.23.0"
httpx = ">=0.27.0"

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
pythonpath = ["."]

[tool.mypy]
python_version = "3.12"
strict = false
ignore_missing_imports = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
